--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Assignment 1: Gracie Abrams Profile</title>
 </head>
 <body>
-    <h1>Gracie Abrams Artist Profile Overview</h1>    
+    <h1>Gracie Abrams Artist Profile Overview</h1>  
+<hr>
+<h1>The story of Gracie Abrams as an artist</h1>
+<p>Gracie Abrams is an American singer-songwriter known for her emotionally charged lyrics and intimate sound. She gained attention with her debut EP, "Minor," and has continued to captivate listeners with her honest approach to pop music. Her songs often explore themes of love, vulnerability, and self-discovery, establishing her as a fresh voice in the music industry.</p>
+<hr>
+    <h2>Personal Information</h2>
+<p>Gracie Abrams was born on September 9, 1999, in Los Angeles, California. She is the daughter of filmmaker J.J. Abrams and screenwriter Katie McGrath. Growing up in a creative environment, she developed a passion for music early on, eventually pursuing a career as a singer-songwriter. Abrams attended Barnard College, where she continued to refine her craft while building her music career.</p>
+
 </body>
 </html>
