Pictures added and information

--- a/index.html
+++ b/index.html
@@ -9,11 +9,57 @@
 <body>
     <h1>Gracie Abrams Artist Profile Overview</h1>  
 <hr>
-<h1>The story of Gracie Abrams as an artist</h1>
+<h2>The story of Gracie Abrams as an artist</h2>
 <p>Gracie Abrams is an American singer-songwriter known for her emotionally charged lyrics and intimate sound. She gained attention with her debut EP, "Minor," and has continued to captivate listeners with her honest approach to pop music. Her songs often explore themes of love, vulnerability, and self-discovery, establishing her as a fresh voice in the music industry.</p>
 <hr>
-    <h2>Personal Information</h2>
+    <h3>Personal Information</h3>
 <p>Gracie Abrams was born on September 9, 1999, in Los Angeles, California. She is the daughter of filmmaker J.J. Abrams and screenwriter Katie McGrath. Growing up in a creative environment, she developed a passion for music early on, eventually pursuing a career as a singer-songwriter. Abrams attended Barnard College, where she continued to refine her craft while building her music career.</p>
-
+<hr>
+    <h3>Artist Insights</h3>
+<p>She is celebrated for her raw, introspective songwriting and emotional authenticity, which has made her a standout in the indie pop scene. Her debut EP, "Minor," was praised for its heartfelt lyrics and intimate production, earning her a dedicated following. While she has yet to win major awards, her rising influence and critical acclaim suggest that she is a promising artist to watch in the music industry. Her growing popularity and influence suggest that she could be a contender for awards in the future.</p>
+<hr>
+<h4>Top Streaming Songs</h4>
+<p>
+    <ol>
+      <li>"I Love You, I'm Sorry"</li>  
+      <li>"Close To You"</li>
+      <li>"I miss you, I'm sorry"</li>
+      <li>"us" ft. Taylor Swift</li>
+      <li>"Risk"</li>
+    </ol>
+</p>
+<hr>
+<h4>Albums released throughout her career</h4>
+<p>
+    <ul>
+        <li>The Secret Of Us (2024)</li>
+        <li>Good Riddance (2023)</li>
+        <li>This Is What It Feels Like (2021)</li>
+        <li>minor (2020)</li>
+    </ul>
+</p>
+<hr>
+<h4>Gallery</h4>
+<figure>
+    <img src="show-18003-1921049173.jpg" alt="Gracie Photoshoot" width="300">
+    <figcaption>Gracie Abrams featured in Coup De Main Magazine</figcaption>
+</figure>
+<figure>
+ <img src="121422_GracieAbrams_Look_01_000119-DN+(1).jpg" alt="Gracie Photoshoot" width="300">
+ <figcaption>Grace Abrams featured in Women in Pop</figcaption>
+</figure>
+<figure>
+    <img src="GRACIE_D_1-1-scaled.jpg.webp" alt="Gracie Abrams in Dork" width="300">
+    <figcaption>Grace Abrams featured in Dork Magazine </figcaption>
+<hr>
+<h4>Music Videos</h4>
+<figure>
+    <h5>Official "I Love You, I'm Sorry" Video</h5>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/uxjhN_Donfw?si=1FtwSlJWvRl1-rJo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</figure>
+<figure>
+    <h5>Official "Risk" Video</h5>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/TiMuT2BhwO0?si=8ijYqC62JSPlwd2v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</figure>
 </body>
 </html>
