--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Gracie Abrams Artist Profile">
+    <meta name="keywords" content="HTML, Music, Artist, Pop">
     <meta name="author" content="Brooke Stimmel">
     <title>Assignment 1: Gracie Abrams Profile</title>
 </head>
@@ -10,32 +12,32 @@
     <h1>Gracie Abrams Artist Profile Overview</h1>  
 <hr>
 <h2>The story of Gracie Abrams as an artist</h2>
-<p>Gracie Abrams is an American singer-songwriter known for her emotionally charged lyrics and intimate sound. She gained attention with her debut EP, "Minor," and has continued to captivate listeners with her honest approach to pop music. Her songs often explore themes of love, vulnerability, and self-discovery, establishing her as a fresh voice in the music industry.</p>
+<p>Gracie Abrams is an <b>American singer-songwriter</b> known for her emotionally charged lyrics and intimate sound. She gained attention with her debut EP,<i>"Minor,"</i> and has continued to captivate listeners with her honest approach to <b>pop music</b>. Her songs often explore themes of <em>love, vulnerabitlity,</em> and <em>self-discovery</em>, establishing her as a fresh voice in the music industry.</p>
 <hr>
     <h3>Personal Information</h3>
-<p>Gracie Abrams was born on September 9, 1999, in Los Angeles, California. She is the daughter of filmmaker J.J. Abrams and screenwriter Katie McGrath. Growing up in a creative environment, she developed a passion for music early on, eventually pursuing a career as a singer-songwriter. Abrams attended Barnard College, where she continued to refine her craft while building her music career.</p>
+<p>Gracie Abrams was born on September 9, 1999, in <b>Los Angeles, California</b>. She is the daughter of filmmaker J.J. Abrams and screenwriter Katie McGrath. Growing up in a creative environment, she developed a passion for music early on, eventually pursuing a career as a singer-songwriter. Abrams attended <b>Barnard College</b>, where she continued to refine her craft while building her music career.</p>
 <hr>
     <h3>Artist Insights</h3>
-<p>She is celebrated for her raw, introspective songwriting and emotional authenticity, which has made her a standout in the indie pop scene. Her debut EP, "Minor," was praised for its heartfelt lyrics and intimate production, earning her a dedicated following. While she has yet to win major awards, her rising influence and critical acclaim suggest that she is a promising artist to watch in the music industry. Her growing popularity and influence suggest that she could be a contender for awards in the future.</p>
+<p>She is celebrated for her <em>raw, introspective</em> songwriting and emotional authenticity, which has made her a standout in the indie pop scene. Her debut EP, <i>"Minor,"</i> was praised for its heartfelt lyrics and intimate production, earning her a dedicated following. While she has yet to win major awards, her rising influence and critical acclaim suggest that she is a promising artist to watch in the music industry. Her growing popularity and influence suggest that she could be a contender for awards in the future.</p>
 <hr>
 <h4>Top Streaming Songs</h4>
 <p>
     <ol>
-      <li>"I Love You, I'm Sorry"</li>  
-      <li>"Close To You"</li>
-      <li>"I miss you, I'm sorry"</li>
-      <li>"us" ft. Taylor Swift</li>
-      <li>"Risk"</li>
+      <li><a href="https://open.spotify.com/track/51rfRCiUSvxXlCSCfIztBy?si=e7f5c9f337d14b13">"I Love You, I'm Sorry"</a></li>  
+      <li><a href="https://open.spotify.com/track/2bl81llf715VEEbAx03yvB?si=a017b1821c014720">"Close To You"</a></li>
+      <li><a href="https://open.spotify.com/track/4nyF5lmSziBAt7ESAUjpbx?si=268d68ffdb7246a8">"I miss you, I'm sorry"</a></li>
+      <li><a href="https://open.spotify.com/track/0hhzNPE68LWLfgZwdpxVdR?si=0f4499eb8a4045c0">"us" ft. Taylor Swift</a></li>
+      <li><a href="https://open.spotify.com/track/0gZGUAO42F1HmzZWHNPGAu?si=6aa8fbc421954be0">"Risk"</a></li>
     </ol>
 </p>
 <hr>
 <h4>Albums released throughout her career</h4>
 <p>
     <ul>
-        <li>The Secret Of Us (2024)</li>
-        <li>Good Riddance (2023)</li>
-        <li>This Is What It Feels Like (2021)</li>
-        <li>minor (2020)</li>
+        <li><i>The Secret Of Us</i> (2024)</li>
+        <li><i>Good Riddance</i> (2023)</li>
+        <li><i>This Is What It Feels Like</i> (2021)</li>
+        <li><i>minor</i> (2020)</li>
     </ul>
 </p>
 <hr>
