--- a/index.html
+++ b/index.html
@@ -7,40 +7,51 @@
     <meta name="keywords" content="HTML, Music, Artist, Pop">
     <meta name="author" content="Brooke Stimmel">
     <title>Assignment 1: Gracie Abrams Profile</title>
+    <link rel="stylesheet" href="css/style.css">
+<!--Section 1-->
 </head>
 <body>
-    <h1>Gracie Abrams Artist Profile Overview</h1>  
+    <header>
+        <h1>Gracie Abrams Artist Profile Overview</h1> 
+    </header>
 <hr>
+<article>
+<!--Section 2-->
 <h2>The story of Gracie Abrams as an artist</h2>
 <p>Gracie Abrams is an <b>American singer-songwriter</b> known for her emotionally charged lyrics and intimate sound. She gained attention with her debut EP,<i>"Minor,"</i> and has continued to captivate listeners with her honest approach to <b>pop music</b>. Her songs often explore themes of <em>love, vulnerabitlity,</em> and <em>self-discovery</em>, establishing her as a fresh voice in the music industry.</p>
 <hr>
+<!--Section 3-->
     <h3>Personal Information</h3>
 <p>Gracie Abrams was born on September 9, 1999, in <b>Los Angeles, California</b>. She is the daughter of filmmaker J.J. Abrams and screenwriter Katie McGrath. Growing up in a creative environment, she developed a passion for music early on, eventually pursuing a career as a singer-songwriter. Abrams attended <b>Barnard College</b>, where she continued to refine her craft while building her music career.</p>
 <hr>
+<!--Section 4-->
     <h3>Artist Insights</h3>
 <p>She is celebrated for her <em>raw, introspective</em> songwriting and emotional authenticity, which has made her a standout in the indie pop scene. Her debut EP, <i>"Minor,"</i> was praised for its heartfelt lyrics and intimate production, earning her a dedicated following. While she has yet to win major awards, her rising influence and critical acclaim suggest that she is a promising artist to watch in the music industry. Her growing popularity and influence suggest that she could be a contender for awards in the future.</p>
 <hr>
+<!--Section 5-->
 <h4>Top Streaming Songs</h4>
 <p>
-    <ol>
-      <li><a href="https://open.spotify.com/track/51rfRCiUSvxXlCSCfIztBy?si=e7f5c9f337d14b13">"I Love You, I'm Sorry"</a></li>  
-      <li><a href="https://open.spotify.com/track/2bl81llf715VEEbAx03yvB?si=a017b1821c014720">"Close To You"</a></li>
-      <li><a href="https://open.spotify.com/track/4nyF5lmSziBAt7ESAUjpbx?si=268d68ffdb7246a8">"I miss you, I'm sorry"</a></li>
-      <li><a href="https://open.spotify.com/track/0hhzNPE68LWLfgZwdpxVdR?si=0f4499eb8a4045c0">"us" ft. Taylor Swift</a></li>
-      <li><a href="https://open.spotify.com/track/0gZGUAO42F1HmzZWHNPGAu?si=6aa8fbc421954be0">"Risk"</a></li>
-    </ol>
+        <ol id="list1">
+            <li><a href="https://open.spotify.com/track/51rfRCiUSvxXlCSCfIztBy?si=e7f5c9f337d14b13">"I Love You, I'm Sorry"</a></li>  
+            <li><a href="https://open.spotify.com/track/2bl81llf715VEEbAx03yvB?si=a017b1821c014720">"Close To You"</a></li>
+            <li><a href="https://open.spotify.com/track/4nyF5lmSziBAt7ESAUjpbx?si=268d68ffdb7246a8">"I miss you, I'm sorry"</a></li>
+            <li><a href="https://open.spotify.com/track/0hhzNPE68LWLfgZwdpxVdR?si=0f4499eb8a4045c0">"us" ft. Taylor Swift</a></li>
+            <li><a href="https://open.spotify.com/track/0gZGUAO42F1HmzZWHNPGAu?si=6aa8fbc421954be0">"Risk"</a></li>
+          </ol> 
 </p>
 <hr>
+<!--Section 6-->
 <h4>Albums released throughout her career</h4>
 <p>
-    <ul>
-        <li><i>The Secret Of Us</i> (2024)</li>
-        <li><i>Good Riddance</i> (2023)</li>
-        <li><i>This Is What It Feels Like</i> (2021)</li>
-        <li><i>minor</i> (2020)</li>
-    </ul>
+    <ul id="list2">
+        <li><i><a href="https://open.spotify.com/album/56bdWeO40o3WfAD2Lja4dl?si=5_7r3sGyQ2-_8nMdxltEAQ">The Secret Of Us</a></i> (2024)</li>
+        <li><i><a href="https://open.spotify.com/album/78YYcghEDz2dHRx0EcDGXZ?si=y5BDoQUNTeKF5oKmwS-omg">Good Riddance</a></i> (2023)</li>
+        <li><i><a href="https://open.spotify.com/album/7l2g05NyprwonSFIs2y8at?si=2_EZdOihSla7KhJf7QAPHw">This Is What It Feels Like</a></i> (2021)</li>
+        <li><i><a href="https://open.spotify.com/album/2UZw04wDxLVceADw2Gi1Qy?si=hRlM7eLjQh-OFJgOfWKMEw">minor</a></i> (2020)</li>
+    </ul>    
 </p>
 <hr>
+<!--Section 7-->
 <h4>Gallery</h4>
 <figure>
     <img src="show-18003-1921049173.jpg" alt="Gracie Photoshoot" width="300">
@@ -54,6 +65,9 @@
     <img src="GRACIE_D_1-1-scaled.jpg.webp" alt="Gracie Abrams in Dork" width="300">
     <figcaption>Grace Abrams featured in Dork Magazine </figcaption>
 <hr>
+</article>
+<footer>
+<!--Section 8-->
 <h4>Music Videos</h4>
 <figure>
     <h5>Official "I Love You, I'm Sorry" Video</h5>
@@ -63,5 +77,8 @@
     <h5>Official "Risk" Video</h5>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/TiMuT2BhwO0?si=8ijYqC62JSPlwd2v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </figure>
+</footer>
+<br>
+<br>
 </body>
 </html>
